testdata/baselines/reference/submodule/conformance/iteratorSpreadInCall12.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iteratorSpreadInCall12.ts(8,20): error TS2304: Cannot find name 'Symbol'.
iteratorSpreadInCall12.ts(13,6): error TS2304: Cannot find name 'Symbol'.
iteratorSpreadInCall12.ts(26,6): error TS2304: Cannot find name 'Symbol'.
iteratorSpreadInCall12.ts(31,12): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iteratorSpreadInCall12.ts (4 errors) ====
    class Foo<T> {
        constructor(...s: T[]) { }
    }
    
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                       ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }
    
    class _StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }
    
    new Foo(...[...new SymbolIterator, ...[...new _StringIterator]]);
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.